# CimrmanModule

./: .gitignore  CMakeLists.txt  README.md  example.conf  install.sh  install_optimized.sh  install_profililng.sh
source/datamodel/: Association.cpp  Association.h  Cluster.cpp  Cluster.h  DelayedCluster.cpp  DelayedCluster.h  Event.cpp  Event.h  Likelihood.cpp  Likelihood.h  LinearFit.cpp  LinearFit.h  OMHit.cpp  OMHit.h  Point.cpp  Point.h  Precluster.cpp  Precluster.h  PreclusterSolution.cpp  PreclusterSolution.h  Solution.cpp  Solution.h  Track.cpp  Track.h  TrackerHit.cpp  TrackerHit.h  Trajectory.cpp  Trajectory.h
source/geometry/: Geometry.cpp  Geometry.h
source/module/: Cimrman.cpp  Cimrman.h
source/reconstruction/: Algos.cpp  Algos.h  KinkFinder.cpp  KinkFinder.h  Sinogram.cpp  Sinogram.h  TrajectoryBuilder.cpp  TrajectoryBuilder.h
source/tkrec/: Algos.cpp  Algos.h  AlphaCluster.cpp  AlphaCluster.h  Association.cpp  Association.h  Cimrman.cpp  Cimrman.h  Cluster.cpp  Cluster.h  DelayedCluster.cpp  DelayedCluster.h  Event.cpp  Event.h  Geometry.h  KinkFinder.cpp  KinkFinder.h  Likelihood.cpp  Likelihood.h  LinearFit.cpp  LinearFit.h  OMHit.cpp  OMHit.h  Point.cpp  Point.h  Precluster.cpp  Precluster.h  PreclusterSolution.cpp  PreclusterSolution.h  Sinogram.cpp  Sinogram.h  Solution.cpp  Solution.h  TKReconstruct.cpp  TKReconstruct.h  Track.cpp  Track.h  TrackerHit.cpp  TrackerHit.h  Trajectory.cpp  (+3 more)
source/visualization/: Visu.cpp  Visu.h
testing/real_data/: pipeline.conf  reco.conf  udd2cd.conf
testing/test1/: pipeline.conf  reco.conf  run.sh  simu.conf  simu1.profile
testing/test2/: pipeline.conf  reco.conf  simu.conf  simulated_tracks_PTD.brio  simulated_tracks_SD.brio  simulated_tracks_TTD.brio  test_SD.brio  test_TTD.brio  visu.cpp
testing/test2/Events_visu/: Run--2_event-0_solution-0_3D.root
